--- a/html/index.htm
+++ b/html/index.htm
@@ -27,7 +27,10 @@
       <a href="monde">monde.</a>
       <a href="support">support.</a>
     </div>
-
-    <div class="main"></div>
+    <div class="main">
+      <div class="hero-page">
+        <img src="" alt="" />
+      </div>
+    </div>
   </body>
 </html>
