hero page finished

--- a/html/index.htm
+++ b/html/index.htm
@@ -21,15 +21,21 @@
   <body>
     <div class="navbar">
       <img src="../assets/svg/LogoBlanc - ProjetWeb.svg" alt="" />
-      <a href="ukraine">ukraine.</a>
-      <a href="russie">russie.</a>
-      <a href="economie">economie.</a>
-      <a href="monde">monde.</a>
       <a href="support">support.</a>
+      <a href="monde">monde.</a>
+      <a href="economie">economie.</a>
+      <a href="russie">russie.</a>
+      <a href="ukraine">ukraine.</a>
     </div>
     <div class="main">
       <div class="hero-page">
-        <img src="" alt="" />
+        <div class="text-hero">
+          <h1>Zachem?</h1>
+          <h1>L'Ukraine au <span class="red">front</span>.</h1>
+          <p>L'horreur présenté en chiffre et en images.</p>
+          <button class="btn-full">origine.</button>
+          <button class="btn-ghost">support.</button>
+        </div>
       </div>
     </div>
   </body>
