--- a/html/index.htm
+++ b/html/index.htm
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/utils.css" />
     <link
       rel="icon"
       type="image/x-icon"
@@ -21,11 +22,13 @@
   <body>
     <div class="navbar">
       <img src="../assets/svg/LogoBlanc - ProjetWeb.svg" alt="" />
-      <a href="support">support.</a>
-      <a href="monde">monde.</a>
-      <a href="economie">economie.</a>
-      <a href="russie">russie.</a>
-      <a href="ukraine">ukraine.</a>
+      <div class="navbar-text">
+        <a href="support">support.</a>
+        <a href="monde">monde.</a>
+        <a href="economie">economie.</a>
+        <a href="russie">russie.</a>
+        <a href="ukraine">ukraine.</a>
+      </div>
     </div>
     <div class="main">
       <div class="hero-page">
