page ukraine avancer

--- a/html/index.htm
+++ b/html/index.htm
@@ -26,10 +26,10 @@
       </a>
       <div class="navbar-text">
         <a href="#support">support.</a>
-        <a href="monde">monde.</a>
-        <a href="economie">economie.</a>
-        <a href="russie">russie.</a>
-        <a href="ukraine">ukraine.</a>
+        <a href="#monde">monde.</a>
+        <a href="#economie">economie.</a>
+        <a href="#russie">russie.</a>
+        <a href="#ukraine">ukraine.</a>
       </div>
     </div>
 
@@ -40,9 +40,31 @@
           <h1>Zachem?</h1>
           <h1>L'Ukraine au <span class="red">front</span>.</h1>
           <p>L'horreur présenté en chiffre et en images.</p>
-          <button class="btn-full">origine.</button>
-          <button class="btn-ghost">support.</button>
+          <a href="#ukraine">
+            <button class="btn-full">origine.</button>
+          </a>
+          <a href="#support">
+            <button class="btn-ghost">support.</button>
+          </a>
         </div>
+      </div>
+
+      <!-- Ukraine Page -->
+      <div id="ukraine" class="ukraine">
+        <div class="grid-img-ukraine-01"></div>
+        <div class="grid-item">
+          <h2>ukraine en <span class="bleu">chiffre</span>.</h2>
+          <p>15 000 <span class="red">morts</span>.</p>
+          <p>1900 blesses</p>
+          <p>2.8 millions deplaces</p>
+        </div>
+        <div class="grid-item">
+          <h2>ukraine en <span class="bleu">images</span>.</h2>
+          <p>1700 batiments detruits</p>
+          <p>119 milliards en <span class="red">dommages</span>.</p>
+          <div class="color"></div>
+        </div>
+        <div class="grid-img-ukraine-02"></div>
       </div>
 
       <!-- Support Page -->
