Hero text center, footer finished, modif size pages

--- a/html/index.htm
+++ b/html/index.htm
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/yourcode.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/utils.css" />
     <link
@@ -83,7 +87,26 @@
       </div>
 
       <!-- Footer Page -->
-      <div class="footer"></div>
+      <div class="footer">
+        <div>
+          <img src="../assets/svg/LogoBlanc - ProjetWeb.svg" alt="" />
+        </div>
+        <div>
+          <p>&copy; 2022 Zachem</p>
+          <p>All rights reserved</p>
+        </div>
+        <div class="footer-logos">
+          <a href="https://www.facebook.com/UkraineUA.MFA">
+            <img src="../assets/svg/facebook-brands.svg" alt="" />
+          </a>
+          <a href="https://www.instagram.com/ukraine/">
+            <img src="../assets/svg/instagram-brands.svg" alt="" />
+          </a>
+          <a href="https://twitter.com/mfa_ukraine">
+            <img src="../assets/svg/twitter-brands.svg" alt="" />
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
