--- a/html/index.htm
+++ b/html/index.htm
@@ -71,6 +71,38 @@
         <div class="grid-img-ukraine-02"></div>
       </div>
 
+      <!-- Russie Page-->
+      <div id="russie" class="russie">
+        <div class="russie-titre">
+          <h2>Réaction du peuple russe.</h2>
+        </div>
+
+        <div class="russie-img-container">
+          <div class="russie-card">
+            <img src="../assets/img/_123545093_hi074346119.jpg" alt="" />
+            <p>révoltes.</p>
+          </div>
+          <div class="russie-card">
+            <img src="../assets/img/_123545095_hi074346263.jpg" alt="" />
+            <p>désaccord.</p>
+          </div>
+          <div class="russie-card">
+            <img src="../assets/img/_123545095_hi074346263.jpg" alt="" />
+            <p>manifestations.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Video Russie -->
+      <div class="video-russie">
+        <video width="100%" autoplay muted>
+          <source
+            src="../assets/video/Y2Mate.is - Protests Erupt in Moscow and St. Petersburg Over Russian Invasion of Ukraine-KsyzTpL16hQ-720p-1650229846370.mp4"
+            type="video/mp4"
+          />
+        </video>
+      </div>
+
       <!-- Support Page -->
       <div id="support" class="support">
         <img src="../assets/img/qr-code.png" alt="" />
@@ -93,7 +125,7 @@
         </div>
         <div>
           <p>&copy; 2022 Zachem</p>
-          <p>All rights reserved</p>
+          <p>Tout droits réservé</p>
         </div>
         <div class="footer-logos">
           <a href="https://www.facebook.com/UkraineUA.MFA">
