--- a/html/index.htm
+++ b/html/index.htm
@@ -97,7 +97,7 @@
       <div class="video-russie">
         <video width="100%" autoplay muted>
           <source
-            src="../assets/video/Y2Mate.is - Protests Erupt in Moscow and St. Petersburg Over Russian Invasion of Ukraine-KsyzTpL16hQ-720p-1650229846370.mp4"
+            src="../assets/vid/Y2Mate.is - Protests Erupt in Moscow and St. Petersburg Over Russian Invasion of Ukraine-KsyzTpL16hQ-720p-1650229846370.mp4"
             type="video/mp4"
           />
         </video>
