--- a/html/index.htm
+++ b/html/index.htm
@@ -111,6 +111,9 @@
         <img src="../assets/img/Capture.PNG" alt="erreur de chargement">
         <div class="economie-texte">
           <h1>Chute du <span class="red">Rouble</span>.</h1>
+          <p>Les États-Unis et l'Union européenne ont déclaré qu'ils excluraient certaines banques russes du système international
+            de paiements bancaires Swift et ont personnellement visé le président russe Vladimir Poutine et son ministre des
+            Affaires étrangères Sergei Lavrov.</p>
           <p>Pendant un moment, il fallait plus de <span class="italic">130 roubles</span> pour faire un dollar contre 75, et
             ce jusqu'au 1er janvier.</p>
         </div>
@@ -148,7 +151,16 @@
       <div id="monde" class="monde">
         <div class="monde-texte">
           <h1><span class="underline-red">Hausse</span> des prix.</h1>
-          <p>dawiubda</p>
+          <h2><span class="red">Monter</span> de l'essence.</h2>
+          <p>la Russie détient 7% des parts du marche du pétrole. Naturellement, le prix à de l'or noire à montée puisque l'offre
+            ne soutenait
+            plus la demande.</p>
+          <h2><span class="red">Chute</span> de la bourse.</h2>
+          <p>La peur des investiseur à créer une certaine volatilité dans les marchés boursiers. Cela fera baisser
+            considérablement tout les secteurs.</p>
+          <h2>Panier d'épicerie plus <span class="red">cher</span>.</h2>
+          <p>Le prix des articles que nous mangeons dépend énormement du transport de ce dernier. Si le prix du baril est élevée,
+            les pommes et bananes le seront aussi!</p>
         </div>
         <img src="../assets/img/gas_prices.PNG" alt="erreur de chargement">
       </div>
