--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,8 @@
       src="https://kit.fontawesome.com/yourcode.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/utils.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/utils.css" />
     <link
       rel="icon"
       type="image/x-icon"
