--- a/index.htm
+++ b/index.htm
@@ -35,11 +35,11 @@
         <img class="logo" src="/assets/svg/LogoBlanc - ProjetWeb.svg" />
       </a>
       <div class="navbar-text">
-        <a href="#support">support.</a>
-        <a href="#monde">monde.</a>
-        <a href="#economie">économie.</a>
-        <a href="#russie">russie.</a>
-        <a href="#ukraine">ukraine.</a>
+        <a href="#support" id="support-menu">support.</a>
+        <a href="#monde" id="monde-menu">monde.</a>
+        <a href="#economie" id="economie-menu">économie.</a>
+        <a href="#russie" id="russie-menu">russie.</a>
+        <a href="#ukraine" id="ukraine-menu">ukraine.</a>
       </div>
     </div>
 
