--- a/index.htm
+++ b/index.htm
@@ -35,11 +35,41 @@
         <img class="logo" src="/assets/svg/LogoBlanc - ProjetWeb.svg" />
       </a>
       <div class="navbar-text">
-        <a href="#support" id="support-menu">support.</a>
-        <a href="#monde" id="monde-menu">monde.</a>
-        <a href="#economie" id="economie-menu">économie.</a>
-        <a href="#russie" id="russie-menu">russie.</a>
-        <a href="#ukraine" id="ukraine-menu">ukraine.</a>
+        <a
+          href="#support"
+          id="support-menu"
+          tabindex="5"
+          onclick="scrollAction('support')"
+          >support.</a
+        >
+        <a
+          href="#monde"
+          id="monde-menu"
+          tabindex="4"
+          onclick="scrollAction('monde')"
+          >monde.</a
+        >
+        <a
+          href="#economie"
+          id="economie-menu"
+          tabindex="3"
+          onclick="scrollAction('economie')"
+          >économie.</a
+        >
+        <a
+          href="#russie"
+          id="russie-menu"
+          tabindex="2"
+          onclick="scrollAction('russie')"
+          >russie.</a
+        >
+        <a
+          href="#ukraine"
+          id="ukraine-menu"
+          tabindex="1"
+          onclick="scrollAction('ukraine')"
+          >ukraine.</a
+        >
       </div>
     </div>
 
@@ -47,17 +77,21 @@
       <!-- Hero Page -->
       <div id="hero-page" class="hero-page">
         <div class="text-hero">
-          <h1>Zachem?</h1>
-          <h1 id="hero-title">
+          <h1 tabindex="6">Zachem?</h1>
+          <h1 id="hero-title" tabindex="7">
             L'Ukraine au <span class="red" id="front">front</span>.
           </h1>
-          <p id="hero-p">L'horreur présentée en chiffres et en images.</p>
+          <p id="hero-p" tabindex="8">
+            L'horreur présentée en chiffres et en images.
+          </p>
           <div class="btn">
             <a href="#ukraine">
-              <button class="btn-full" id="btn-origin">origine.</button>
+              <button tabindex="9" class="btn-full" id="btn-origin">
+                origine.
+              </button>
             </a>
             <a href="#support">
-              <button class="btn-ghost">support.</button>
+              <button tabindex="10" class="btn-ghost">support.</button>
             </a>
           </div>
         </div>
@@ -65,62 +99,67 @@
 
       <!-- Ukraine Page -->
       <div id="ukraine" class="ukraine">
-        <div class="grid-img-ukraine-01"></div>
+        <div class="grid-img-ukraine-01" tabindex="15"></div>
         <div class="grid-item">
-          <h2 id="ukraine-title-num">
+          <h2 id="ukraine-title-num" tabindex="11">
             ukraine en <span class="bleu">chiffres</span>.
           </h2>
-          <p id="deaths">15 000 <span class="red">morts</span>.</p>
-          <p id="blesse">1900 blessées</p>
-          <p id="moved">2.8 millions déplacées</p>
+          <p id="deaths" tabindex="12">
+            15 000 <span class="red">morts</span>.
+          </p>
+          <p id="blesse" tabindex="13">1900 blessées</p>
+          <p id="moved" tabindex="14">2.8 millions déplacées</p>
         </div>
         <div class="grid-item">
-          <h2 id="ukraine-title-images">
+          <h2 id="ukraine-title-images" tabindex="16">
             ukraine en <span class="bleu">images</span>.
           </h2>
-          <p id="batiment">1700 bâtiments détruits</p>
-          <p id="dommage">
+          <p id="batiment" tabindex="17">1700 bâtiments détruits</p>
+          <p id="dommage" tabindex="18">
             119 milliards en <span class="red">dommages</span>.
           </p>
           <div class="color"></div>
         </div>
-        <div class="grid-img-ukraine-02"></div>
+        <div class="grid-img-ukraine-02" tabindex="19"></div>
       </div>
 
       <!-- Russie Page-->
       <div id="russie" class="russie">
         <div class="russie-titre">
-          <h2 id="russie-title">Réaction du peuple russe.</h2>
+          <h2 id="russie-title" tabindex="20">Réaction du peuple russe.</h2>
         </div>
 
         <div class="russie-img-container">
           <div class="russie-card">
             <img
+              tabindex="22"
               src="/assets/img/_123545093_hi074346119.jpg"
               alt="erreur de chargement"
             />
-            <p id="rev">révoltes.</p>
+            <p id="rev" tabindex="21">révoltes.</p>
           </div>
           <div class="russie-card">
             <img
+              tabindex="24"
               src="/assets/img/_123545095_hi074346263.jpg"
               alt="erreur de chargement"
             />
-            <p id="des">désaccord.</p>
+            <p id="des" tabindex="23">désaccord.</p>
           </div>
           <div class="russie-card">
             <img
+              tabindex="26"
               src="/assets/img/_123545095_hi074346263.jpg"
               alt="erreur de chargement"
             />
-            <p id="manif">manifestations.</p>
+            <p id="manif" tabindex="25">manifestations.</p>
           </div>
         </div>
       </div>
 
       <!-- Video Russie -->
       <div class="video-russie">
-        <video width="100%" autoplay muted>
+        <video width="100%" autoplay muted tabindex="27">
           <source
             src="/assets/vid/Y2Mate.is - Protests Erupt in Moscow and St. Petersburg Over Russian Invasion of Ukraine-KsyzTpL16hQ-720p-1650229846370.mp4"
             type="video/mp4"
@@ -130,17 +169,23 @@
 
       <!-- Economie Page -->
       <div id="economie" class="economie">
-        <img src="/assets/img/Capture.PNG" alt="erreur de chargement" />
+        <img
+          src="/assets/img/Capture.PNG"
+          alt="erreur de chargement"
+          tabindex="31"
+        />
         <div class="economie-texte">
-          <h1 id="econo-title">Chute du <span class="red">Rouble</span>.</h1>
-          <p id="econo-p1">
+          <h1 id="econo-title" tabindex="28">
+            Chute du <span class="red">Rouble</span>.
+          </h1>
+          <p id="econo-p1" tabindex="29">
             Les États-Unis et l'Union européenne ont déclaré qu'ils excluraient
             certaines banques russes du système international de paiements
             bancaires Swift et ont personnellement visé le président russe
             Vladimir Poutine et son ministre des Affaires étrangères Sergei
             Lavrov.
           </p>
-          <p id="econo-p2">
+          <p id="econo-p2" tabindex="30">
             Pendant un moment, il fallait plus de
             <span class="italic">130 roubles</span> pour faire un dollar
             américain, et ce jusqu'au 1er janvier.
@@ -199,48 +244,58 @@
       <!-- Monde Page -->
       <div id="monde" class="monde">
         <div class="monde-texte">
-          <h1 id="monde-maintitle">
+          <h1 id="monde-maintitle" tabindex="32">
             <span class="underline-red">Hausse</span> des prix.
           </h1>
-          <h2 id="monde-title-01">
+          <h2 id="monde-title-01" tabindex="33">
             <span class="red">Monter</span> de l'essence.
           </h2>
-          <p id="monde-p1">
+          <p id="monde-p1" tabindex="34">
             La Russie détient 7% des parts du marché pétrolier. Naturellement,
             le prix de l'or noir a augmenté puisque l'offre ne soutenait plus la
             demande.
           </p>
-          <h2 id="monde-title-02">
+          <h2 id="monde-title-02" tabindex="35">
             <span class="red">Chute</span> de la bourse.
           </h2>
-          <p id="monde-p2">
+          <p id="monde-p2" tabindex="36">
             La peur des investiseurs a créé une certaine volatilité dans les
             marchés boursiers. Cela fera baisser considérablement tout les
             secteurs.
           </p>
-          <h2 id="monde-title-03">
+          <h2 id="monde-title-03" tabindex="37">
             Panier d'épicerie plus <span class="red">cher</span>.
           </h2>
-          <p id="monde-p3">
+          <p id="monde-p3" tabindex="38">
             Le prix des articles que nous mangeons dépend énormément du
             transport de ce dernier. Si le prix du baril est élevé, les pommes
             et bananes le seront aussi!
           </p>
         </div>
-        <img src="/assets/img/gas_prices.PNG" alt="erreur de chargement" />
+        <img
+          src="/assets/img/gas_prices.PNG"
+          alt="erreur de chargement"
+          tabindex="39"
+        />
       </div>
 
       <!-- Support Page -->
       <div id="support" class="support">
-        <img src="/assets/img/qr-code.png" alt="erreur de chargement" />
+        <img
+          src="/assets/img/qr-code.png"
+          alt="erreur de chargement"
+          tabindex="40"
+        />
         <div class="text-support">
-          <h1 id="support-title">Supporter</h1>
-          <h1 id="support-title-02">L'<span class="red">Ukraine</span>.</h1>
-          <p id="support-p">Payment par BTC, ETC et USDT</p>
+          <h1 id="support-title" tabindex="41">Supporter</h1>
+          <h1 id="support-title-02" tabindex="42">
+            L'<span class="red">Ukraine</span>.
+          </h1>
+          <p id="support-p" tabindex="43">Payment par BTC, ETC et USDT</p>
           <a
             href="https://www.blockchain.com/btc/address/357a3So9CbsNfBBgFYACGvxxS6tMaDoa1P"
           >
-            <button class="btn-ghost">donation.</button>
+            <button class="btn-ghost" tabindex="44">donation.</button>
           </a>
         </div>
       </div>
@@ -249,43 +304,35 @@
       <div class="footer">
         <div>
           <img
+            tabindex="45"
             src="/assets/svg/LogoBlanc - ProjetWeb.svg"
             alt="erreur de chargement"
           />
         </div>
         <div>
-          <p>&copy; 2022 Zachem</p>
-          <p>Tout droits réservés</p>
-          <p id="date"></p>
-          <div id="google_translate_element"></div>
+          <p tabindex="46">&copy; 2022 Zachem</p>
+          <p tabindex="47">Tout droits réservés</p>
+          <p id="date" tabindex="48"></p>
           <div class="language">
-            <a href="#hero-page">
-              <p class="lang" onclick="changeFrench()">FR</p>
-            </a>
+            <p class="lang" onclick="changeFrench()" tabindex="49">FR</p>
             <p id="slash">/</p>
-            <a href="#hero-page">
-              <p class="lang" onclick="changeEnglish()">EN</p>
-            </a>
+            <p class="lang" onclick="changeEnglish()" tabindex="50">EN</p>
           </div>
-          <script
-            type="text/javascript"
-            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-          ></script>
         </div>
         <div class="footer-logos">
-          <a href="https://www.facebook.com/UkraineUA.MFA">
+          <a href="https://www.facebook.com/UkraineUA.MFA" tabindex="51">
             <img
               src="/assets/svg/facebook-brands.svg"
               alt="erreur de chargement"
             />
           </a>
-          <a href="https://www.instagram.com/ukraine/">
+          <a href="https://www.instagram.com/ukraine/" tabindex="52">
             <img
               src="/assets/svg/instagram-brands.svg"
               alt="erreur de chargement"
             />
           </a>
-          <a href="https://twitter.com/mfa_ukraine">
+          <a href="https://twitter.com/mfa_ukraine" tabindex="53">
             <img
               src="/assets/svg/twitter-brands.svg"
               alt="erreur de chargement"
