--- a/index.htm
+++ b/index.htm
@@ -31,45 +31,25 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="#hero-page">
+      <div onclick="scrollAction(hero-page)">
         <img class="logo" src="/assets/svg/LogoBlanc - ProjetWeb.svg" />
-      </a>
+      </div>
       <div class="navbar-text">
-        <a
-          href="#support"
-          id="support-menu"
-          tabindex="5"
-          onclick="scrollAction('support')"
-          >support.</a
-        >
-        <a
-          href="#monde"
-          id="monde-menu"
-          tabindex="4"
-          onclick="scrollAction('monde')"
-          >monde.</a
-        >
-        <a
-          href="#economie"
-          id="economie-menu"
-          tabindex="3"
-          onclick="scrollAction('economie')"
-          >économie.</a
-        >
-        <a
-          href="#russie"
-          id="russie-menu"
-          tabindex="2"
-          onclick="scrollAction('russie')"
-          >russie.</a
-        >
-        <a
-          href="#ukraine"
-          id="ukraine-menu"
-          tabindex="1"
-          onclick="scrollAction('ukraine')"
-          >ukraine.</a
-        >
+        <p id="support-menu" tabindex="5" onclick="scrollAction('support')">
+          support.
+        </p>
+        <p id="monde-menu" tabindex="4" onclick="scrollAction('monde')">
+          monde.
+        </p>
+        <p id="economie-menu" tabindex="3" onclick="scrollAction('economie')">
+          économie.
+        </p>
+        <p id="russie-menu" tabindex="2" onclick="scrollAction('russie')">
+          russie.
+        </p>
+        <p id="ukraine-menu" tabindex="1" onclick="scrollAction('ukraine')">
+          ukraine.
+        </p>
       </div>
     </div>
 
