--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="navbar">
-      <div onclick="scrollTop()">
+      <div onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">
         <img class="logo" src="/assets/svg/LogoBlanc - ProjetWeb.svg" />
       </div>
       <div class="navbar-text">
@@ -290,7 +290,7 @@
       <!-- Footer Page -->
       <div class="footer">
         <div>
-          <img onclick="scrollTop()"
+          <img onclick="window.scrollTo({ top: 0, behavior: 'smooth' });"
             tabindex="45"
             src="/assets/svg/LogoBlanc - ProjetWeb.svg"
             alt="erreur de chargement"
