--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
   <body>
     <div class="navbar">
       <div onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">
-        <img class="logo" src="/assets/svg/LogoBlanc - ProjetWeb.svg" />
+        <img class="logo" src="/assets/svg/LogoBlanc - ProjetWeb.svg" alt="logo" />
       </div>
       <div class="navbar-text">
         <p id="support-menu" tabindex="5" onclick="scrollAction('support')">
@@ -55,7 +55,7 @@
 
     <div class="main">
       <!-- Hero Page -->
-      <div id="hero-page" class="hero-page">
+      <div id="hero-page" class="hero-page" alt="image enfant émigrant">
         <div class="text-hero">
           <h1 tabindex="6">Zachem?</h1>
           <h1 id="hero-title" tabindex="7">
@@ -86,7 +86,7 @@
 
       <!-- Ukraine Page -->
       <div id="ukraine" class="ukraine">
-        <div class="grid-img-ukraine-01" tabindex="15"></div>
+        <div class="grid-img-ukraine-01" tabindex="15" alt="image paysage détruit"></div>
         <div class="grid-item">
           <h2 id="ukraine-title-num" tabindex="11">
             ukraine en <span class="bleu">chiffres</span>.
@@ -107,7 +107,7 @@
           </p>
           <div class="color"></div>
         </div>
-        <div class="grid-img-ukraine-02" tabindex="19"></div>
+        <div class="grid-img-ukraine-02" tabindex="19" alt="image manifestion ukraine"></div>
       </div>
 
       <!-- Russie Page-->
@@ -121,23 +121,23 @@
             <img
               tabindex="22"
               src="/assets/img/_123545093_hi074346119.jpg"
-              alt="erreur de chargement"
+              alt="manifestation pancarte stop the war"
             />
             <p id="rev" tabindex="21">révoltes.</p>
           </div>
           <div class="russie-card">
             <img
               tabindex="24"
-              src="/assets/img/_123545095_hi074346263.jpg"
-              alt="erreur de chargement"
+              src="/assets/img/ukraine.PNG"
+              alt="manifestations en ukraine"
             />
             <p id="des" tabindex="23">désaccord.</p>
           </div>
           <div class="russie-card">
             <img
               tabindex="26"
-              src="/assets/img/_123545095_hi074346263.jpg"
-              alt="erreur de chargement"
+              src="/assets/img/_123545166_hi074346031.jpg"
+              alt="manifestation devant un bâtiment"
             />
             <p id="manif" tabindex="25">manifestations.</p>
           </div>
@@ -150,6 +150,7 @@
           <source
             src="/assets/vid/Y2Mate.is - Protests Erupt in Moscow and St. Petersburg Over Russian Invasion of Ukraine-KsyzTpL16hQ-720p-1650229846370.mp4"
             type="video/mp4"
+            alt="vidéo manifestations en Russie"
           />
         </video>
       </div>
@@ -158,7 +159,7 @@
       <div id="economie" class="economie">
         <img
           src="/assets/img/Capture.PNG"
-          alt="erreur de chargement"
+          alt="main avec des roubles"
           tabindex="31"
         />
         <div class="economie-texte">
@@ -261,7 +262,7 @@
         </div>
         <img
           src="/assets/img/gas_prices.PNG"
-          alt="erreur de chargement"
+          alt="pancarte d'essence"
           tabindex="39"
         />
       </div>
@@ -270,7 +271,7 @@
       <div id="support" class="support">
         <img
           src="/assets/img/qr-code.png"
-          alt="erreur de chargement"
+          alt="code qr"
           tabindex="40"
         />
         <div class="text-support">
@@ -310,18 +311,18 @@
           <a href="https://www.facebook.com/UkraineUA.MFA" tabindex="51">
             <img
               src="/assets/svg/facebook-brands.svg"
-              alt="erreur de chargement"
+              alt="lien facebook ukraine"
             />
           </a>
           <a href="https://www.instagram.com/ukraine/" >
           <img tabindex="52"
               src="/assets/svg/instagram-brands.svg"
-              alt="erreur de chargement"
+              alt="lien instagram ukraine"
             />
           <a href="https://twitter.com/mfa_ukraine" tabindex="53">
             <img
               src="/assets/svg/twitter-brands.svg"
-              alt="erreur de chargement"
+              alt="lien twitter ukraine"
             />
           </a>
         </div>
